--- a/pom.xml
+++ b/pom.xml
@@ -46,20 +46,21 @@
 	<properties>
 	   <!-- Global properties -->
 		<project.build.sourceEncoding>latin1</project.build.sourceEncoding>
-		<play.version>2.3.9</play.version>
+		<play.version>2.4.2</play.version>
+		<play.java.ebean.version>1.0.0</play.java.ebean.version>
 		<java.source>1.8</java.source>
         <java.target>1.8</java.target>
-        <scala.version>2.10</scala.version>
+        <scala.version>2.11</scala.version>
         <!-- Dependencies properties -->
-        <play-plugins-mailer.version>2.4.1</play-plugins-mailer.version>
+        <javax.mail.version>1.5.3</javax.mail.version>
         <jcl-core.version>2.6</jcl-core.version>
         <mysql-connector-java.version>5.1.32</mysql-connector-java.version>
         <qrgen.version>1.2</qrgen.version>
-        <play-pac4j_java.version>1.3.0</play-pac4j_java.version>
-        <pac4j-http.version>1.6.0</pac4j-http.version>
-        <pac4j-cas.version>1.6.0</pac4j-cas.version>
-        <pac4j-core.version>1.6.0</pac4j-core.version>
-        <pac4j-saml.version>1.6.0</pac4j-saml.version>
+        <play-pac4j-java.version>1.5.1-SNAPSHOT</play-pac4j-java.version>
+        <pac4j-http.version>1.7.0</pac4j-http.version>
+        <pac4j-cas.version>1.7.0</pac4j-cas.version>
+        <pac4j-core.version>1.7.0</pac4j-core.version>
+        <pac4j-saml.version>1.7.0</pac4j-saml.version>
         <spring.version>4.0.3.RELEASE</spring.version>
         <rhino.version>1.7R4</rhino.version>
         <swagger-play2.version>1.3.12</swagger-play2.version>
@@ -78,7 +79,7 @@
 		<json.version>20090211</json.version>
 		<httpclient.version>4.2.6</httpclient.version>
 		<jasperreports.version>6.1.0</jasperreports.version>
-		<deadbolt.version>2.3.3</deadbolt.version>
+		<deadbolt.version>2.4.0</deadbolt.version>
 		<commons-eclipse-jdt.version>3.10.0</commons-eclipse-jdt.version>
 
 		<!-- Plugin properties -->
@@ -118,7 +119,7 @@
 			<url>scp://prod.the-agile-factory.net/var/www/html/${project.groupId}/${project.artifactId}-${project.version}</url>
 		</site>
 	</distributionManagement>
-
+	
 	<dependencies>
 		<!-- Play Framework Dependencies -->
 		<dependency>
@@ -149,18 +150,12 @@
 			<version>${play.version}</version>
 			<scope>provided</scope>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>com.typesafe.play</groupId>
-			<artifactId>play-java-ebean_${scala.version}</artifactId>
-			<version>${play.version}</version>
+			<artifactId>play-ebean_${scala.version}</artifactId>
+			<version>${play.java.ebean.version}</version>
 			<scope>provided</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>com.typesafe.play</groupId>
-			<artifactId>play-mailer_${scala.version}</artifactId>
-			<version>${play-plugins-mailer.version}</version>
 		</dependency>
 
 		<!-- Application deps -->
@@ -179,12 +174,18 @@
 			<artifactId>qrgen</artifactId>
 			<version>${qrgen.version}</version>
 		</dependency>
+		<!-- JavaxMail API -->
+		<dependency>
+		    <groupId>com.sun.mail</groupId>
+		    <artifactId>javax.mail</artifactId>
+		    <version>${javax.mail.version}</version>
+		</dependency>
 
 		<!-- PAC4j -->
 		<dependency>
 			<groupId>org.pac4j</groupId>
-			<artifactId>play-pac4j_java</artifactId>
-			<version>${play-pac4j_java.version}</version>
+			<artifactId>play-pac4j-java</artifactId>
+			<version>${play-pac4j-java.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.typesafe.play</groupId>
@@ -300,6 +301,63 @@
 		<!-- Swagger -->
 		<dependency>
             <groupId>com.wordnik</groupId>
+            <artifactId>swagger-jaxrs_${scala.version}</artifactId>
+            <version>${swagger-play2.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.reflections</groupId>
+                    <artifactId>reflections</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.scala-lang</groupId>
+                    <artifactId>scala-library</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.typesafe.play</groupId>
+                    <artifactId>play_${scala.version}</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.core</groupId>
+					<artifactId>jackson-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.core</groupId>
+					<artifactId>jackson-databind</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.core</groupId>
+					<artifactId>jackson-annotations</artifactId>
+				</exclusion>
+            </exclusions>
+        </dependency>
+		<!-- 
+		<dependency>
+			<groupId>pl.matisoft</groupId>
+			<artifactId>swagger-play24_2.11</artifactId>
+			<version>1.4</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.core</groupId>
+					<artifactId>jackson-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.core</groupId>
+					<artifactId>jackson-databind</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.core</groupId>
+					<artifactId>jackson-annotations</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		 -->
+		<!-- 
+		<dependency>
+            <groupId>com.wordnik</groupId>
             <artifactId>swagger-play2_${scala.version}</artifactId>
             <version>${swagger-play2.version}</version>
             <exclusions>
@@ -344,6 +402,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        -->
 
 		<!-- Commons -->
 		<dependency>
@@ -516,9 +575,10 @@
 						<phase>package</phase>
 						<configuration>
 							<target>
+								<unzip src="${project.build.directory}/${project.build.finalName}.zip" dest="${project.build.directory}"/>
 								<zip destfile="${project.build.directory}/${project.build.finalName}.temp">
 									<zipgroupfileset dir="${project.build.directory}" includes="${project.build.finalName}.jar" />
-									<zipgroupfileset dir="${project.build.directory}" includes="*-assets.jar" />
+									<zipgroupfileset dir="${project.build.directory}/${artifactId}-dist/lib/" includes="*-assets.jar" />
 								</zip>
 								<move file="${project.build.directory}/${project.build.finalName}.temp" tofile="${project.build.directory}/${project.build.finalName}.jar" />
 							</target>
