--- a/pom.xml
+++ b/pom.xml
@@ -334,31 +334,9 @@
 				</exclusion>
             </exclusions>
         </dependency>
-		<!-- 
-		<dependency>
-			<groupId>pl.matisoft</groupId>
-			<artifactId>swagger-play24_2.11</artifactId>
-			<version>1.4</version>
-			<exclusions>
-				<exclusion>
-					<groupId>com.fasterxml.jackson.core</groupId>
-					<artifactId>jackson-core</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.fasterxml.jackson.core</groupId>
-					<artifactId>jackson-databind</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.fasterxml.jackson.core</groupId>
-					<artifactId>jackson-annotations</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		 -->
-		<!-- 
 		<dependency>
             <groupId>com.wordnik</groupId>
-            <artifactId>swagger-play2_${scala.version}</artifactId>
+            <artifactId>swagger-core_${scala.version}</artifactId>
             <version>${swagger-play2.version}</version>
             <exclusions>
                 <exclusion>
@@ -377,32 +355,20 @@
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-api</artifactId>
                 </exclusion>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.core</groupId>
+					<artifactId>jackson-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.core</groupId>
+					<artifactId>jackson-databind</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.core</groupId>
+					<artifactId>jackson-annotations</artifactId>
+				</exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>com.wordnik</groupId>
-            <artifactId>swagger-play2-utils_${scala.version}</artifactId>
-            <version>${swagger-play2-utils.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.reflections</groupId>
-                    <artifactId>reflections</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.scala-lang</groupId>
-                    <artifactId>scala-library</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.typesafe.play</groupId>
-                    <artifactId>play_${scala.version}</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        -->
 
 		<!-- Commons -->
 		<dependency>
