--- a/pom.xml
+++ b/pom.xml
@@ -440,6 +440,11 @@
 			<artifactId>httpclient</artifactId>
 			<version>${httpclient.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>${httpclient.version}</version>
+		</dependency>
 
 		<!-- Jasper dependencies -->
 		<dependency>
