--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
 		<httpclient.version>4.3.6</httpclient.version>
 		<httpcore.version>4.3.3</httpcore.version>
 		<jasperreports.version>6.1.0</jasperreports.version>
-		<deadbolt.version>2.4.0</deadbolt.version>
+		<deadbolt.version>2.4.2</deadbolt.version>
 		<commons-eclipse-jdt.version>3.10.0</commons-eclipse-jdt.version>
 
 		<!-- Plugin properties -->
@@ -541,7 +541,7 @@
 								<unzip src="${project.build.directory}/${project.build.finalName}.zip" dest="${project.build.directory}"/>
 								<zip destfile="${project.build.directory}/${project.build.finalName}.temp">
 									<zipgroupfileset dir="${project.build.directory}" includes="${project.build.finalName}.jar" />
-									<zipgroupfileset dir="${project.build.directory}/${artifactId}-dist/lib/" includes="*-assets.jar" />
+									<zipgroupfileset dir="${project.build.directory}/${project.artifactId}-dist/lib/" includes="*-assets.jar" />
 								</zip>
 								<move file="${project.build.directory}/${project.build.finalName}.temp" tofile="${project.build.directory}/${project.build.finalName}.jar" />
 							</target>
