#TAF-325 adding the JCL source in order to debug

--- a/pom.xml
+++ b/pom.xml
@@ -157,11 +157,25 @@
 		</dependency>
 
 		<!-- Application deps -->
+		<!-- 
 		<dependency>
 			<groupId>org.xeustechnologies</groupId>
 			<artifactId>jcl-core</artifactId> 
 			<version>${jcl-core.version}</version>
 		</dependency>
+		 -->
+		<dependency>
+			<groupId>org.objenesis</groupId>
+			<artifactId>objenesis</artifactId>
+			<version>2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib-nodep</artifactId>
+			<version>2.2</version>
+		</dependency>
+		 
+		 
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
