--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.agifac.lib</groupId>
 	<artifactId>app-framework</artifactId>
-	<version>11.0.0</version>
+	<version>11.0.1-SNAPSHOT</version>
 	<name>tAF application framework</name>
 	<description>This is the common library which contains the web application framework from tAF</description>
 	<packaging>play2</packaging>
@@ -18,7 +18,7 @@
 		<connection>scm:git:https://github.com/theAgileFactory/app-framework.git</connection>
 		<developerConnection>scm:git:https://github.com/theAgileFactory/app-framework.git</developerConnection>
 		<url>scm:git:https://github.com/theAgileFactory/app-framework.git</url>
-	  <tag>app-framework-11.0.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 		
 	<repositories>
