--- a/.travis.yml
+++ b/.travis.yml
@@ -19,12 +19,16 @@ before_install:
 - sudo apt-get install --only-upgrade -y oracle-java8-installer
 - openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in secring.gpg.enc -out secring.gpg -d
 - openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in pubring.gpg.enc -out pubring.gpg -d
+- pwd
+- ls *.gpg
 - echo "<settings><servers><server><id>ossrh</id><username>\${OSSRH_JIRA_USERNAME}</username><password>\${OSSRH_JIRA_PASSWORD}</password></server></servers></settings>" > $HOME/.m2/settings.xml
 
 install:
 - wget ${ACTIVATOR_ZIP_URL}
 - unzip -q ${ACTIVATOR_ZIP_FILE}
 script:
+- pwd
+- ls *.gpg
 - mvn -f pom2.xml clean install -Dgpg.defaultKeyring=false -Dgpg-keyname=F79C926B -Dgpg.passphrase=${GPG_PASSPHRASE} -Dgpg.publicKeyring=pubring.gpg -Dgpg.secretKeyring=secring.gpg
 after_script:
 - rm secring.gpg
