--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ env:
 before_install:
 - sudo apt-get update
 - sudo apt-get install --only-upgrade -y oracle-java8-installer
-- openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in secring.gpg.enc -out secring.gpg -d
-- openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in pubring.gpg.enc -out pubring.gpg -d
+- openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in secring.gpg.enc -out ~/secring.gpg -d
+- openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in pubring.gpg.enc -out ~/pubring.gpg -d
 - pwd
 - ls *.gpg
 - echo "<settings><servers><server><id>ossrh</id><username>\${OSSRH_JIRA_USERNAME}</username><password>\${OSSRH_JIRA_PASSWORD}</password></server></servers></settings>" > $HOME/.m2/settings.xml
@@ -29,10 +29,10 @@ install:
 script:
 - pwd
 - ls *.gpg
-- mvn -f pom2.xml clean install -Darguments="-Dgpg.defaultKeyring=false -Dgpg-keyname=F79C926B -Dgpg.passphrase=${GPG_PASSPHRASE} -Dgpg.publicKeyring=pubring.gpg -Dgpg.secretKeyring=secring.gpg"
+- mvn -f pom2.xml clean install -Darguments="-Dgpg.defaultKeyring=false -Dgpg-keyname=F79C926B -Dgpg.passphrase=${GPG_PASSPHRASE} -Dgpg.publicKeyring=~/pubring.gpg -Dgpg.secretKeyring=~/secring.gpg"
 after_script:
-- rm secring.gpg
-- rm pubring.gpg
+- rm ~/secring.gpg
+- rm ~/pubring.gpg
 - rm $HOME/.m2/settings.xml
 notifications:
   email: true
