--- a/.travis.yml
+++ b/.travis.yml
@@ -19,21 +19,17 @@ before_install:
 - sudo apt-get install --only-upgrade -y oracle-java8-installer
 - openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in secring.gpg.enc -out ~/secring.gpg -d
 - openssl aes-256-cbc -pass pass:$ENCRYPTION_PASSWORD -in pubring.gpg.enc -out ~/pubring.gpg -d
-- pwd
-- ls *.gpg
-- echo "<settings><servers><server><id>ossrh</id><username>\${OSSRH_JIRA_USERNAME}</username><password>\${OSSRH_JIRA_PASSWORD}</password></server></servers></settings>" > $HOME/.m2/settings.xml
+- echo "<settings><servers><server><id>ossrh</id><username>\${OSSRH_JIRA_USERNAME}</username><password>\${OSSRH_JIRA_PASSWORD}</password></server></servers></settings>" > ~/.m2/settings.xml
 
 install:
 - wget ${ACTIVATOR_ZIP_URL}
 - unzip -q ${ACTIVATOR_ZIP_FILE}
 script:
-- pwd
-- ls *.gpg
-- mvn -f pom2.xml clean install -Darguments="-Dgpg.defaultKeyring=false -Dgpg-keyname=F79C926B -Dgpg.passphrase=${GPG_PASSPHRASE} -Dgpg.publicKeyring=~/pubring.gpg -Dgpg.secretKeyring=~/secring.gpg"
+- mvn -f pom2.xml clean install -Darguments="-Dgpg.defaultKeyring=false -Dgpg-keyname=F79C926B -Dgpg.passphrase=${GPG_PASSPHRASE} -Dgpg.publicKeyring=~/pubring.gpg -Dgpg.secretKeyring=~/secring.gpg" --settings ~/.m2/settings.xml
 after_script:
 - rm ~/secring.gpg
 - rm ~/pubring.gpg
-- rm $HOME/.m2/settings.xml
+- rm ~/.m2/settings.xml
 notifications:
   email: true
 branches:
@@ -44,6 +40,6 @@ scala:
 cache:
   directories:
   - .autoconf
-  - $HOME/.m2
-  - $HOME/.sbt
-  - $HOME/.ivy
+  - ~/.m2
+  - ~/.sbt
+  - ~/.ivy
