--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
 - wget ${ACTIVATOR_ZIP_URL}
 - unzip -q ${ACTIVATOR_ZIP_FILE}
 script:
-- mvn -f pom2.xml clean install gpg:sign -Dgpg.passphrase=${GPG_PASSPHRASE} --settings ~/.m2/settings.xml
+- mvn -f pom2.xml clean install gpg:sign -Dgpg.passphrase="${GPG_PASSPHRASE}" --settings ~/.m2/settings.xml
 after_script:
 - rm ~/.gnupg/secring.gpg
 - rm ~/.gnupg/pubring.gpg
