--- a/pom.xml
+++ b/pom.xml
@@ -1,26 +1,36 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.agifac.lib</groupId>
 	<artifactId>app-framework</artifactId>
-	<version>12.1.1-SNAPSHOT</version>
-	<name>tAF application framework</name>
-	<description>This is the common library which contains the web application framework from tAF</description>
+	<version>15.0.0-SNAPSHOT</version>
+	<name>BizDock application framework</name>
+	<description>This is the common library which contains the web application framework for BizDock</description>
 	<packaging>play2</packaging>
-	<url>https://prod.the-agile-factory.net/site/${project.groupId}/${project.artifactId}-${project.version}</url>
+	<url>https://github.com/theAgileFactory</url>
 
-	<organization>
-		<name>The Agile Factory</name>
-		<url>http://www.the-agile-factory.com</url>
-	</organization>
+	<licenses>
+		<license>
+			<name>GNU General Public License, version 2</name>
+			<url>http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt</url>
+		</license>
+	</licenses>
 
 	<scm>
 		<connection>scm:git:https://github.com/theAgileFactory/app-framework.git</connection>
 		<developerConnection>scm:git:https://github.com/theAgileFactory/app-framework.git</developerConnection>
 		<url>scm:git:https://github.com/theAgileFactory/app-framework.git</url>
-	  <tag>HEAD</tag>
-  </scm>
-		
+		<tag>HEAD</tag>
+	</scm>
+
+	<developers>
+		<developer>
+			<id>pycloux</id>
+			<name>Pierre-Yves Cloux</name>
+			<email>dev@pycloux.com</email>
+		</developer>
+	</developers>
+
 	<repositories>
 		<repository>
 			<id>typesafe</id>
@@ -34,35 +44,25 @@
 		</repository>
 	</repositories>
 
-	<ciManagement>
-		<system>jenkins</system>
-		<url>https://prod.the-agile-factory.net/jenkins/</url>
-	</ciManagement>
-
-	<issueManagement>
-		<system>Redmine</system>
-		<url>https://prod.the-agile-factory.net/</url>
-	</issueManagement>
-
 	<properties>
-	   <!-- Global properties -->
+		<!-- Global properties -->
 		<project.build.sourceEncoding>latin1</project.build.sourceEncoding>
 		<play.version>2.4.2</play.version>
 		<play.java.ebean.version>1.0.0</play.java.ebean.version>
 		<java.source>1.8</java.source>
-        <java.target>1.8</java.target>
-        <scala.version>2.11</scala.version>
-        <!-- Dependencies properties -->
-        <javax.mail.version>1.5.3</javax.mail.version>
-        <jcl-core.version>2.7</jcl-core.version>
-        <mysql-connector-java.version>5.1.36</mysql-connector-java.version>
-        <play-pac4j-java.version>1.5.0</play-pac4j-java.version>
-        <pac4j-http.version>1.7.0</pac4j-http.version>
-        <pac4j-cas.version>1.7.0</pac4j-cas.version>
-        <pac4j-core.version>1.7.0</pac4j-core.version>
-        <pac4j-saml.version>1.7.0</pac4j-saml.version>
-        <swagger-play2.version>1.3.12</swagger-play2.version>
-        <swagger-play2-utils.version>1.3.12</swagger-play2-utils.version>
+		<java.target>1.8</java.target>
+		<scala.version>2.11</scala.version>
+		<!-- Dependencies properties -->
+		<javax.mail.version>1.5.3</javax.mail.version>
+		<jcl-core.version>2.7</jcl-core.version>
+		<mysql-connector-java.version>5.1.36</mysql-connector-java.version>
+		<play-pac4j-java.version>1.5.0</play-pac4j-java.version>
+		<pac4j-http.version>1.7.0</pac4j-http.version>
+		<pac4j-cas.version>1.7.0</pac4j-cas.version>
+		<pac4j-core.version>1.7.0</pac4j-core.version>
+		<pac4j-saml.version>1.7.0</pac4j-saml.version>
+		<swagger-play2.version>1.3.12</swagger-play2.version>
+		<swagger-play2-utils.version>1.3.12</swagger-play2-utils.version>
 		<commons-beanutils.version>1.9.2</commons-beanutils.version>
 		<commons-codec.version>1.10</commons-codec.version>
 		<commons-io.version>2.4</commons-io.version>
@@ -76,7 +76,7 @@
 		<json.version>20141113</json.version>
 		<httpclient.version>4.3.6</httpclient.version>
 		<httpcore.version>4.3.3</httpcore.version>
-		<jasperreports.version>6.1.1</jasperreports.version>
+		<jasperreports.version>6.3.1</jasperreports.version>
 		<deadbolt.version>2.4.2</deadbolt.version>
 		<commons-eclipse-jdt.version>3.10.0</commons-eclipse-jdt.version>
 
@@ -104,20 +104,11 @@
 
 	<distributionManagement>
 		<snapshotRepository>
-			<id>snapshots</id>
-			<url>https://prod.the-agile-factory.net/nexus/content/repositories/snapshots</url>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
-		<repository>
-			<id>releases</id>
-			<url>https://prod.the-agile-factory.net/nexus/content/repositories/releases</url>
-		</repository>
-		<site>
-			<id>site</id>
-			<name>site</name>
-			<url>scp://prod.the-agile-factory.net/var/www/html/${project.groupId}/${project.artifactId}-${project.version}</url>
-		</site>
 	</distributionManagement>
-	
+
 	<dependencies>
 		<!-- Play Framework Dependencies -->
 		<dependency>
@@ -126,7 +117,7 @@
 			<version>${play.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<!-- the Java API is in this artifact -->
 		<dependency>
 			<groupId>com.typesafe.play</groupId>
@@ -148,7 +139,7 @@
 			<version>${play.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.typesafe.play</groupId>
 			<artifactId>play-ebean_${scala.version}</artifactId>
@@ -156,10 +147,10 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- Application deps --> 
+		<!-- Application deps -->
 		<dependency>
 			<groupId>org.xeustechnologies</groupId>
-			<artifactId>jcl-core</artifactId> 
+			<artifactId>jcl-core</artifactId>
 			<version>${jcl-core.version}</version>
 		</dependency>
 		<dependency>
@@ -172,19 +163,19 @@
 			<artifactId>cglib-nodep</artifactId>
 			<version>2.2</version>
 		</dependency>
-		 
-		 
+
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql-connector-java.version}</version>
 		</dependency>
-		
+
 		<!-- JavaxMail API -->
 		<dependency>
-		    <groupId>com.sun.mail</groupId>
-		    <artifactId>javax.mail</artifactId>
-		    <version>${javax.mail.version}</version>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>${javax.mail.version}</version>
 		</dependency>
 
 		<!-- PAC4j -->
@@ -218,18 +209,18 @@
 			<artifactId>pac4j-core</artifactId>
 			<version>${pac4j-core.version}</version>
 		</dependency>
-        <dependency>
-            <groupId>org.pac4j</groupId>
-            <artifactId>pac4j-saml</artifactId>
-            <version>${pac4j-saml.version}</version>
-        </dependency>
-		
+		<dependency>
+			<groupId>org.pac4j</groupId>
+			<artifactId>pac4j-saml</artifactId>
+			<version>${pac4j-saml.version}</version>
+		</dependency>
+
 		<!-- Deadbolt -->
 		<dependency>
-		    <groupId>be.objectify</groupId>
-		    <artifactId>deadbolt-java_${scala.version}</artifactId>
-		    <version>${deadbolt.version}</version>
-		    <exclusions>
+			<groupId>be.objectify</groupId>
+			<artifactId>deadbolt-java_${scala.version}</artifactId>
+			<version>${deadbolt.version}</version>
+			<exclusions>
 				<exclusion>
 					<groupId>com.typesafe.play</groupId>
 					<artifactId>play_${scala.version}</artifactId>
@@ -261,10 +252,10 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-		    <groupId>be.objectify</groupId>
-		    <artifactId>deadbolt-core_${scala.version}</artifactId>
-		    <version>${deadbolt.version}</version>
-		    <exclusions>
+			<groupId>be.objectify</groupId>
+			<artifactId>deadbolt-core_${scala.version}</artifactId>
+			<version>${deadbolt.version}</version>
+			<exclusions>
 				<exclusion>
 					<groupId>com.typesafe.play</groupId>
 					<artifactId>play_${scala.version}</artifactId>
@@ -295,36 +286,37 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
-		<!-- JAXRS API dependency (used by swagger which depends on an outdated API) -->
+
+		<!-- JAXRS API dependency (used by swagger which depends on an outdated 
+			API) -->
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>javax.ws.rs-api</artifactId>
 			<version>2.0.1</version>
 		</dependency>
-		
+
 		<!-- Swagger -->
 		<dependency>
-            <groupId>com.wordnik</groupId>
-            <artifactId>swagger-jaxrs_${scala.version}</artifactId>
-            <version>${swagger-play2.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.reflections</groupId>
-                    <artifactId>reflections</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.scala-lang</groupId>
-                    <artifactId>scala-library</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.typesafe.play</groupId>
-                    <artifactId>play_${scala.version}</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>
+			<groupId>com.wordnik</groupId>
+			<artifactId>swagger-jaxrs_${scala.version}</artifactId>
+			<version>${swagger-play2.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.reflections</groupId>
+					<artifactId>reflections</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.scala-lang</groupId>
+					<artifactId>scala-library</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.typesafe.play</groupId>
+					<artifactId>play_${scala.version}</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
 				<exclusion>
 					<groupId>com.fasterxml.jackson.core</groupId>
 					<artifactId>jackson-core</artifactId>
@@ -341,29 +333,29 @@
 					<groupId>javax.ws.rs</groupId>
 					<artifactId>jsr311-api</artifactId>
 				</exclusion>
-            </exclusions>
-        </dependency>
+			</exclusions>
+		</dependency>
 		<dependency>
-            <groupId>com.wordnik</groupId>
-            <artifactId>swagger-core_${scala.version}</artifactId>
-            <version>${swagger-play2.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.reflections</groupId>
-                    <artifactId>reflections</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.scala-lang</groupId>
-                    <artifactId>scala-library</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.typesafe.play</groupId>
-                    <artifactId>play_${scala.version}</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>
+			<groupId>com.wordnik</groupId>
+			<artifactId>swagger-core_${scala.version}</artifactId>
+			<version>${swagger-play2.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.reflections</groupId>
+					<artifactId>reflections</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.scala-lang</groupId>
+					<artifactId>scala-library</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.typesafe.play</groupId>
+					<artifactId>play_${scala.version}</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
 				<exclusion>
 					<groupId>com.fasterxml.jackson.core</groupId>
 					<artifactId>jackson-core</artifactId>
@@ -376,8 +368,8 @@
 					<groupId>com.fasterxml.jackson.core</groupId>
 					<artifactId>jackson-annotations</artifactId>
 				</exclusion>
-            </exclusions>
-        </dependency>
+			</exclusions>
+		</dependency>
 
 		<!-- Commons -->
 		<dependency>
@@ -544,12 +536,20 @@
 						<phase>package</phase>
 						<configuration>
 							<target>
-								<unzip src="${project.build.directory}/${project.build.finalName}.zip" dest="${project.build.directory}" />
-								<zip destfile="${project.build.directory}/${project.build.finalName}.temp">
-									<zipgroupfileset dir="${project.build.directory}" includes="${project.build.finalName}.jar" />
-									<zipgroupfileset dir="${project.build.directory}/${project.artifactId}-dist/lib/" includes="*-assets.jar" />
+								<unzip
+									src="${project.build.directory}/${project.build.finalName}.zip"
+									dest="${project.build.directory}" />
+								<zip
+									destfile="${project.build.directory}/${project.build.finalName}.temp">
+									<zipgroupfileset dir="${project.build.directory}"
+										includes="${project.build.finalName}.jar" />
+									<zipgroupfileset
+										dir="${project.build.directory}/${project.artifactId}-dist/lib/"
+										includes="*-assets.jar" />
 								</zip>
-								<move file="${project.build.directory}/${project.build.finalName}.temp" tofile="${project.build.directory}/${project.build.finalName}.jar" />
+								<move
+									file="${project.build.directory}/${project.build.finalName}.temp"
+									tofile="${project.build.directory}/${project.build.finalName}.jar" />
 							</target>
 						</configuration>
 						<goals>
@@ -570,50 +570,37 @@
 			</plugin>
 
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-site-plugin</artifactId>
-				<version>${maven-site-plugin.version}</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.wagon</groupId>
-						<artifactId>wagon-ssh</artifactId>
-						<version>${wagon-ssh.version}</version>
-					</dependency>
-				</dependencies>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.3</version>
+				<extensions>true</extensions>
 				<configuration>
-					<reportPlugins>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-project-info-reports-plugin</artifactId>
-							<version>${maven-project-info-reports-plugin.version}</version>
-							<configuration>
-								<dependencyDetailsEnabled>false</dependencyDetailsEnabled>
-								<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
-							</configuration>
-							<reports>
-								<report>index</report>
-								<report>issue-tracking</report>
-								<report>summary</report>
-								<report>dependencies</report>
-								<report>scm</report>
-								<report>cim</report>
-								<report>distribution-management</report>
-							</reports>
-						</plugin>
-						<plugin>
-							<groupId>org.codehaus.mojo</groupId>
-							<artifactId>versions-maven-plugin</artifactId>
-							<version>${versions-maven-plugin.version}</version>
-							<reports>
-								<report>dependency-updates-report</report>
-								<report>plugin-updates-report</report>
-								<report>property-updates-report</report>
-							</reports>
-						</plugin>
-					</reportPlugins>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>true</autoReleaseAfterClose>
 				</configuration>
 			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+			          <id>sign-artifacts</id>
+			          <phase>verify</phase>
+			          <goals>
+			            <goal>sign</goal>
+			          </goals>
+			        </execution>
+			    </executions>
+			</plugin>
+			
+			<plugin>
+		        <groupId>org.codehaus.mojo</groupId>
+		        <artifactId>versions-maven-plugin</artifactId>
+		        <version>2.2</version>
+		    </plugin>
 		</plugins>
 	</build>
 </project>
