--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sword-group.bizdock.lib</groupId>
 	<artifactId>app-framework</artifactId>
-	<version>17.0.3</version>
+	<version>17.0.4-SNAPSHOT</version>
 	<name>BizDock application framework</name>
 	<description>This is the common library which contains the web application framework for BizDock</description>
 	<packaging>play2</packaging>
